[package]
name = "atoma-tdx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.7.9"
fastcrypto = "0.1.8"
rand = { version = "0.8.5", features = ["std"] }
serde = "1.0.215"
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
tdx = { git = "https://github.com/automata-network/tdx-attestation-sdk.git", branch = "main" }
thiserror = "2.0.3"
tokio = "1.41.1"
